--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,7 +12,12 @@
  android:typeface="serif"
 />    
 <Button android:id ="@+id/button3"
- android:text="Haha! Another one!"
+ android:text="Wanna Laugh More"
+ android:layout_height="wrap_content"
+ android:layout_width="wrap_content"
+/>
+<Button android:id ="@+id/button4"
+ android:text="Insult Me More"
  android:layout_height="wrap_content"
  android:layout_width="wrap_content"
 />
