--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,4 +6,11 @@
         <item name="android:textColor">#00FF00</item>
         <item name="android:typeface">monospace</item>
     </style>
+    <style name="JokeInsultFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:background">#FFFFFF</item>
+    </style>
 </resources>
