--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,38 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/linearlayout"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ffffff"
-    android:weightSum="1">
-<TextView android:id="@+id/serif"
- android:text="Serif"
- android:layout_height="0dp"
- android:typeface="serif"
- android:background="@drawable/joker_fade"
- android:layout_weight="0.90" 
- android:textColor="#000000"
- android:textAppearance="@style/JokeInsultFont"
- android:scrollbars="vertical" android:scrollbarFadeDuration="500" android:layout_width="match_parent" 
- android:padding="20px" 
- android:gravity="fill|center_vertical" android:fadeScrollbars="true" android:scrollbarDefaultDelayBeforeFade="500" android:scrollbarSize="5px" android:shadowColor="#0F0F0F"/>    
-<LinearLayout
- android:orientation="horizontal"
- android:layout_width="wrap_content"
- android:layout_height="0dp"
+<LinearLayout android:id="@+id/linearlayout"
+ android:orientation="vertical"
+ android:layout_width="fill_parent"
+ android:layout_height="fill_parent"
  android:background="#ffffff"
- android:layout_weight="0.10"
- android:layout_gravity="center">
-<Button android:id ="@+id/button4"
- android:text="Next Insult..."
- android:layout_height="fill_parent"
- android:layout_width="wrap_content"
- />
-<Button android:id ="@+id/button3"
- android:text="Next Joke..."
- android:layout_height="fill_parent"
- android:layout_width="wrap_content"
-/>
-</LinearLayout>
+ android:weightSum="1" 
+ xmlns:android="http://schemas.android.com/apk/res/android"
+ xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+ >
+	<TextView android:id="@+id/serif"
+	 android:text="Serif"
+	 android:layout_height="0dp"
+	 android:background="@drawable/joker_fade"
+	 android:layout_weight="1" 
+	 android:textColor="#000000"
+	 android:textAppearance="@style/JokeInsultFont"
+	 android:scrollbars="vertical" android:scrollbarFadeDuration="500" android:layout_width="fill_parent" 
+	 android:padding="20px" 
+	 android:gravity="fill|center_vertical" android:fadeScrollbars="true" android:scrollbarDefaultDelayBeforeFade="500" android:scrollbarSize="5px"/>
+	<LinearLayout
+	 android:orientation="horizontal"
+	 android:layout_width="fill_parent"
+	 android:layout_height="50dp"
+	 android:layout_weight="0"
+	 android:background="#ffffff" 
+	 android:weightSum="1" android:layout_gravity="center_horizontal|bottom">
+	 	<TextView android:id="@+id/label1"
+	 	 android:layout_height="fill_parent"
+	 	 android:layout_width="wrap_content"
+	 	 android:layout_weight="0"
+	 	 android:gravity="center"
+		 android:textColor="#000000"
+	 	 android:text="Insult"
+	 	 android:layout_margin="2dp"
+	 	 android:textAppearance="@style/LabelFont"
+	 	/>
+		<SeekBar android:id="@+id/seekBar1" 
+		 android:layout_height="fill_parent" 
+		 android:progress="0"
+		 android:max="100" 
+		 android:layout_weight="1"
+		 android:layout_margin="10dp"
+		 android:layout_width="0dp"/>
+		<TextView android:id="@+id/label2"
+		 android:text="Joke"
+		 android:layout_weight="0"
+		 android:layout_height="fill_parent"
+		 android:layout_width="wrap_content"
+		 android:gravity="center"
+		 android:textColor="#000000"
+		 android:layout_margin="2dp"
+		 android:textAppearance="@style/LabelFont"
+		/>
+		<Button android:id ="@+id/button3"
+		 android:text=">"
+		 android:layout_height="fill_parent"
+		 android:layout_weight="0"
+		 android:layout_width="50dp"		 
+		 android:layout_margin="2dp"
+		android:textStyle="bold"/>
+	</LinearLayout>
+	<com.google.ads.AdView android:id="@+id/adView"
+	 android:layout_width="fill_parent"
+	 android:layout_height="wrap_content"
+	 android:layout_weight="0"
+	 ads:adUnitId="a14e25e167bba07"
+     ads:adSize="BANNER"
+     ads:loadAdOnCreate="true"
+	/>
 </LinearLayout>
