--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,11 +6,20 @@
         <item name="android:textColor">#00FF00</item>
         <item name="android:typeface">monospace</item>
     </style>
-    <style name="JokeInsultFont" parent="@android:style/TextAppearance.Medium">
+    <style name="JokeInsultFont" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">#FFFFFF</item>
+    </style>
+    <style name="LabelFont" parent="@android:style/TextAppearance.Small">
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
         <item name="android:typeface">normal</item>
         <item name="android:background">#FFFFFF</item>
     </style>
+    
 </resources>
