--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,16 +8,22 @@
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  >
-	<TextView android:id="@+id/serif"
-	 android:text="Serif"
-	 android:layout_height="0dp"
-	 android:background="@drawable/joker_fade"
+ 	<FrameLayout android:id="@+id/frameLayout"
 	 android:layout_weight="1" 
-	 android:textColor="#000000"
-	 android:textAppearance="@style/JokeInsultFont"
-	 android:scrollbars="vertical" android:scrollbarFadeDuration="500" android:layout_width="fill_parent" 
-	 android:padding="20px" 
-	 android:gravity="fill|center_vertical" android:fadeScrollbars="true" android:scrollbarDefaultDelayBeforeFade="500" android:scrollbarSize="5px"/>
+	 android:layout_width="fill_parent" 
+	 android:layout_height="0dp">
+		<ImageView android:src="@drawable/joker_fade" android:id="@+id/imageView1" android:layout_height="fill_parent" android:layout_width="fill_parent"
+		 android:layout_gravity="center"/>
+		<TextView android:id="@+id/serif"
+		 android:text="Serif"
+		 android:layout_height="fill_parent"
+		 android:textColor="#000000"
+		 android:textAppearance="@style/JokeInsultFont"
+		 android:scrollbars="vertical" android:scrollbarFadeDuration="500" android:layout_width="fill_parent" 
+		 android:padding="20px" 
+		 android:gravity="fill|center_vertical" android:fadeScrollbars="true" android:scrollbarDefaultDelayBeforeFade="500" android:scrollbarSize="5px"
+		 android:scrollbarStyle="outsideOverlay"/>
+	</FrameLayout> 
 	<LinearLayout
 	 android:orientation="horizontal"
 	 android:layout_width="fill_parent"
@@ -29,10 +35,11 @@
 	 	 android:layout_height="fill_parent"
 	 	 android:layout_width="wrap_content"
 	 	 android:layout_weight="0"
-	 	 android:gravity="center"
+	 	 android:gravity="center_vertical|right"
 		 android:textColor="#000000"
 	 	 android:text="Insult"
-	 	 android:layout_margin="2dp"
+	 	 android:layout_marginRight="2dp"
+	 	 android:layout_marginLeft="5dp"
 	 	 android:textAppearance="@style/LabelFont"
 	 	/>
 		<SeekBar android:id="@+id/seekBar1" 
@@ -40,25 +47,40 @@
 		 android:progress="0"
 		 android:max="100" 
 		 android:layout_weight="1"
-		 android:layout_margin="10dp"
-		 android:layout_width="0dp"/>
+		 android:layout_marginTop="10dp"
+		 android:layout_marginBottom="10dp"
+		 android:layout_width="0dp"
+		 android:layout_gravity="bottom"/>
 		<TextView android:id="@+id/label2"
 		 android:text="Joke"
 		 android:layout_weight="0"
 		 android:layout_height="fill_parent"
 		 android:layout_width="wrap_content"
-		 android:gravity="center"
+		 android:gravity="left|center_vertical"
 		 android:textColor="#000000"
-		 android:layout_margin="2dp"
+		 android:layout_marginLeft="2dp"
+		 android:layout_marginRight="5dp"
 		 android:textAppearance="@style/LabelFont"
 		/>
-		<Button android:id ="@+id/button3"
-		 android:text=">"
+		<Button android:id ="@+id/twitter_button"
+		 android:text="t"
+		 android:layout_height="fill_parent"
+		 android:layout_weight="0"
+		 android:layout_width="50dp"		 
+		 android:layout_margin="2dp"
+		android:textStyle="bold" android:visibility="visible"/>
+		<Button android:id ="@+id/fb_button"
+		 android:text="f"
 		 android:layout_height="fill_parent"
 		 android:layout_weight="0"
 		 android:layout_width="50dp"		 
 		 android:layout_margin="2dp"
 		android:textStyle="bold"/>
+		<Button android:layout_height="fill_parent" android:layout_width="50dp" android:id="@+id/nextButton" android:layout_weight="0" 
+		 android:text=">"
+		 android:layout_margin="2dp"
+		 android:textStyle="bold"
+		 />
 	</LinearLayout>
 	<com.google.ads.AdView android:id="@+id/adView"
 	 android:layout_width="fill_parent"
