--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:background">#FFFFFF</item>
     </style>
-    <style name="LabelFont" parent="@android:style/TextAppearance.Small">
+    <style name="LabelFont" parent="@android:style/TextAppearance.StatusBar.Title">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
