--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,23 +8,7 @@
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  >
- 	<FrameLayout android:id="@+id/frameLayout"
-	 android:layout_weight="1" 
-	 android:layout_width="fill_parent" 
-	 android:layout_height="0dp">
-		<ImageView android:src="@drawable/joker_fade" android:id="@+id/imageView1" android:layout_height="fill_parent" android:layout_width="fill_parent"
-		 android:layout_gravity="center"/>
-		<TextView android:id="@+id/serif"
-		 android:text="Serif"
-		 android:layout_height="fill_parent"
-		 android:textColor="#000000"
-		 android:textAppearance="@style/JokeInsultFont"
-		 android:scrollbars="vertical" android:scrollbarFadeDuration="500" android:layout_width="fill_parent" 
-		 android:padding="20px" 
-		 android:gravity="fill|center_vertical" android:fadeScrollbars="true" android:scrollbarDefaultDelayBeforeFade="500" android:scrollbarSize="5px"
-		 android:scrollbarStyle="outsideOverlay"/>
-	</FrameLayout> 
-	<LinearLayout
+ 	<LinearLayout
 	 android:orientation="horizontal"
 	 android:layout_width="fill_parent"
 	 android:layout_height="50dp"
@@ -62,25 +46,75 @@
 		 android:layout_marginRight="5dp"
 		 android:textAppearance="@style/LabelFont"
 		/>
-		<Button android:id ="@+id/twitter_button"
-		 android:text="t"
-		 android:layout_height="fill_parent"
-		 android:layout_weight="0"
-		 android:layout_width="50dp"		 
-		 android:layout_margin="2dp"
-		android:textStyle="bold" android:visibility="visible"/>
-		<Button android:id ="@+id/fb_button"
-		 android:text="f"
-		 android:layout_height="fill_parent"
-		 android:layout_weight="0"
-		 android:layout_width="50dp"		 
-		 android:layout_margin="2dp"
-		android:textStyle="bold"/>
-		<Button android:layout_height="fill_parent" android:layout_width="50dp" android:id="@+id/nextButton" android:layout_weight="0" 
-		 android:text=">"
+		<!-- ImageButton android:id="@+id/imageButton1" android:layout_width="50dp" android:layout_weight="0" android:layout_height="fill_parent" android:src="@drawable/red_right_arrow"/-->
+		<Button android:layout_height="fill_parent" 
+		 android:layout_width="120dp" android:id="@+id/nextButton" android:layout_weight="0" 
+		 android:text="One more..."
 		 android:layout_margin="2dp"
 		 android:textStyle="bold"
 		 />
+	</LinearLayout>
+ 	<FrameLayout android:id="@+id/frameLayout"
+	 android:layout_weight="1" 
+	 android:layout_width="fill_parent" 
+	 android:layout_height="0dp">
+		<ImageView android:src="@drawable/joker_fade" android:id="@+id/imageView1" android:layout_height="fill_parent" android:layout_width="fill_parent"
+		 android:layout_gravity="center"/>
+		<TextView android:id="@+id/serif"
+		 android:text="Serif"
+		 android:layout_height="fill_parent"
+		 android:textColor="#000000"
+		 android:textAppearance="@style/JokeInsultFont"
+		 android:scrollbars="vertical" android:scrollbarFadeDuration="500" android:layout_width="fill_parent" 
+		 android:padding="45px" 
+		 android:gravity="fill|center_vertical" android:fadeScrollbars="true" android:scrollbarDefaultDelayBeforeFade="500" android:scrollbarSize="5px"
+		 android:scrollbarStyle="outsideOverlay"/>
+	</FrameLayout> 
+	<LinearLayout
+	 android:orientation="horizontal"
+	 android:layout_width="fill_parent"
+	 android:layout_height="50dp"
+	 android:layout_weight="0"
+	 android:background="#ffffff" 
+	 android:weightSum="1" android:layout_gravity="center_horizontal|bottom"
+	 android:gravity="center">
+		<TextView android:id="@+id/shareLabel"
+		 android:text="Share Via"
+		 android:layout_weight="0"
+		 android:layout_height="fill_parent"
+		 android:layout_width="wrap_content"
+		 android:gravity="right|center_vertical"
+		 android:textColor="#000000"
+		 android:layout_marginLeft="2dp"
+		 android:layout_marginRight="5dp"
+		 android:textAppearance="@style/LabelFont"
+		/>
+		<ImageButton android:id ="@+id/fb_button"
+		 android:layout_height="fill_parent"
+		 android:layout_weight="0"
+		 android:layout_width="50dp"		 
+		 android:layout_margin="2dp"
+		 android:layout_gravity="center"
+		 android:src="@drawable/fbicon"
+		 android:scaleType="fitXY"
+		 android:adjustViewBounds="true"
+		 />
+		 <!-- 
+		 android:text="facebook"
+		 android:textStyle="bold"/-->
+		<ImageButton android:id ="@+id/share_button"
+		 android:layout_height="fill_parent"
+		 android:layout_weight="0"
+		 android:layout_width="50dp"		 
+		 android:layout_margin="2dp"
+		 android:layout_gravity="center"
+		 android:visibility="visible"
+		 android:src="@drawable/biggerplus"
+		 android:scaleType="fitXY"
+		 />
+<!-- 		 android:text="Share"
+		 android:textStyle="bold" --> 
+		
 	</LinearLayout>
 	<com.google.ads.AdView android:id="@+id/adView"
 	 android:layout_width="fill_parent"
